# waker

./: Cargo.toml  LICENSE-GPL  README.md
wakeonlan/: Cargo.toml  README.md
wakeonlan-cli/: Cargo.toml  README.md
wakeonlan-cli/src/: main.rs  types.rs  utils.rs
wakeonlan/benches/: mac.rs  packet_creation.rs  packet_send.rs
wakeonlan/src/: errors.rs  lib.rs  types.rs
wakeonlan/tests/: mac.rs  magic_packet.rs
waker/: Cargo.toml  README.md
waker-cli/: Cargo.toml  README.md
waker-cli/src/: main.rs  types.rs  utils.rs
waker-server/: .env-example  .gitignore  Cargo.toml
waker-server/src/: main.rs
waker-server/src/server/: mod.rs  utils.rs
waker-server/src/server/api/: mod.rs  v1.rs
waker/benches/: mac.rs  packet_creation.rs  packet_send.rs
waker/src/: errors.rs  lib.rs  types.rs
waker/tests/: mac.rs  magic_packet.rs
