[workspace]
resolver = "2"
members = ["waker", "waker-cli"]

[workspace.package]
edition = "2021"
authors = ["DarkCeptor44"]
homepage = "https://github.com/DarkCeptor44/waker"
repository = "https://github.com/DarkCeptor44/waker"

[workspace.dependencies]
# waker
anyhow = "1.0.100"
serde = "1.0.228"
thiserror = "2.0.18"

# waker-cli
clap = "4.5.56"
colored = "3.1.1"
configura = "1.1.0"
handy-rs = "2.2.0"
inquire = "0.9.2"
tabela = "0.2.0"
waker = { version = "1", path = "./waker", features = ["serde"] }

# dev-dependencies
divan = "0.1.21"
serde_json = "1.0.149"
