[package]
name = "wakeonlan"
version = "0.1.0"
description = "Wake-On-LAN library for Rust"
edition.workspace = true
rust-version = "1.78"
authors.workspace = true
license = "LGPL-3.0-or-later"

[dependencies]
anyhow.workspace = true
serde = { version = "^1", features = ["derive"], optional = true }
thiserror = "^2"

[dev-dependencies]
divan = "^0.1"
serde_json = "^1"

[features]
default = []
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = ["serde"]

[[bench]]
name = "mac"
harness = false

[[bench]]
name = "packet_creation"
harness = false

[[bench]]
name = "packet_send"
harness = false
