[package]
name = "waker-cli"
version = "0.1.0"
description = "Wake-On-LAN command line interface for Rust"
edition.workspace = true
rust-version = "1.80"
authors.workspace = true
license = "GPL-3.0-or-later"

[dependencies]
anyhow.workspace = true
clap = { version = "^4", features = ["derive"] }
colored = "^3"
configura = "^1"
handy-rs = { version = "^2", features = ["pattern"] }
inquire = "^0.7"
serde = { version = "^1", features = ["derive"] }
tabela = "^0.2"
waker = { version = "^0.1", path = "../waker", features = ["serde"] }

[[bin]]
name = "waker"
path = "src/main.rs"
