[package]
name = "waker-cli"
version = "0.1.0"
description = "Wake-On-LAN command line interface for Rust"
edition.workspace = true
rust-version = "1.80"
authors.workspace = true
license = "GPL-3.0-or-later"
homepage = "https://github.com/DarkCeptor44/waker/tree/main/waker-cli"
repository.workspace = true
keywords = ["wake-on-lan", "wol", "magic-packet", "wakeonlan"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow.workspace = true
clap = { version = "^4", features = ["derive"] }
colored = "^3"
configura = "^1"
handy-rs = { version = "^2", features = ["pattern"] }
inquire = "^0.7"
serde = { version = "^1", features = ["derive"] }
tabela = "^0.2"
waker = { version = "^0.1", path = "../waker", features = ["serde"] }

[[bin]]
name = "wake"
path = "src/main.rs"
