[package]
name = "waker-cli"
version = "0.1.0"
description = "Wake-On-LAN command line interface for Rust"
edition.workspace = true
rust-version = "1.80"
authors.workspace = true
license = "GPL-3.0-or-later"
homepage.workspace = true
repository.workspace = true
keywords = ["wake-on-lan", "wol", "magic-packet", "wakeonlan"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
colored.workspace = true
configura.workspace = true
handy-rs = { workspace = true, features = ["pattern"] }
inquire.workspace = true
serde = { workspace = true, features = ["derive"] }
tabela.workspace = true
waker.workspace = true

[[bin]]
name = "wake"
path = "src/main.rs"
