[package]
name = "waker-server"
version = "0.1.0"
description = "Wake-on-LAN server for Rust"
license = "GPL-3.0-or-later"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "^0.8", features = ["http2"] }
chrono = "^0.4"
clap = { version = "^4", features = ["derive"] }
colored = "^3"
dotenvy = "^0.15"
log = "^0.4"
num_cpus = "^1"
rayon = "^1"
serde = { version = "^1", features = ["derive"] }
simplelog = "^0.12"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
tower = "^0.5"
tower-http = { version = "^0.6", features = ["cors", "timeout", "fs"] }
waker = { version = "^0.1", path = "../waker", features = ["serde"] }
